# gemini-vlm-goal-inference

./: .env.example  .gitignore  ANALYSIS_FEATURES.md  API_KEY_SETUP.md  API_KEY_UPDATE_SUMMARY.md  AUDIT_SUMMARY.md  CHANGELOG.md  EVALUATION_MODES.md  HRI_Legibility_Thesis_Analysis.pptx  IMPLEMENTATION_SUMMARY.md  QUICK_API_REFERENCE.md  QUICK_REFERENCE.md  README.md  USER_STUDY_DESIGN.md  _embed_outputs.py  _run_analysis.py  pyproject.toml  user_study_timepoints.csv  vlm_legibility_analysis.ipynb
analysis_3/: COMPREHENSIVE_REPORT.md  FINAL_RECOMMENDATION.md  LATEST_MODEL_EVALUATION_RESULTS.md  anomalies.csv  anomaly_explanations.txt  model_comparison.csv  results_gemini_2_5_flash.jsonl  results_gemini_2_5_pro.jsonl  results_gemini_3_1_pro_preview.jsonl  results_gemini_3_pro_preview.jsonl  results_gemini_pro_latest.jsonl  video_comparison.csv
analysis_results_2/: PIPELINE_DIAGRAMS_GUIDE.md  README_DEFENSE_PACKAGE.md  THESIS_DEFENSE_EXPLANATIONS.md  accuracy_summary.csv  analysis_summary.json  generate_vlm_flow.py  iou_per_participant.csv  iou_per_video.csv
analysis_results_final/: accuracy_summary.csv  analysis_summary.json  frame_based_comparison.csv  iou_per_video.csv  timing_analysis.csv  vlm_inference_le_l_block_t5_prefix_frames.json  vlm_prompt_le_l_block_t5_prefix_frames.txt
data/: manifest.jsonl
outputs/: pip_freeze.txt  results_claude_opus.jsonl  results_claude_opus46.jsonl  results_gpt4o.jsonl  results_gpt54.jsonl  run_info.json  run_info_0cbd4669.json  run_info_2b2775a5.json  run_info_2e265494.json  run_info_8321a768.json  run_info_aa541987.json  (+4 more)
(+121 files in other folders)
