[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-vlm-eval"
version = "0.1.0"
description = "Evaluate robot-motion legibility using Gemini VLM"
authors = [{name = "Your Name"}]
dependencies = [
    "google-genai",
    "opencv-python",
    "pydantic",
    "python-dotenv",
    "tenacity",
]
requires-python = ">=3.8"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
all-providers = ["openai>=1.0", "anthropic>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]